static prompts added

--- a/1.basic_langchain_with_openAI.ipynb
+++ b/1.basic_langchain_with_openAI.ipynb
@@ -10,21 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ddedc1e9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
     "load_dotenv()"
@@ -32,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "33e4c4b5",
    "metadata": {},
    "outputs": [],
@@ -41,8 +30,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2c143aa7",
+   "metadata": {},
+   "source": [
+    "Connect with Open AI"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "56c64b37",
    "metadata": {},
    "outputs": [],
@@ -53,71 +50,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "a81cd409",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The Prime Minister of Bangladesh is Sheikh Hasina.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "res = llm.invoke(\"Who is the prime minister of Bangladesh?\")\n",
     "print(res.content)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "95c3e747",
+   "metadata": {},
+   "source": [
+    "Connect with Gemini"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "3083bcb1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from dotenv import load_dotenv\n",
-    "load_dotenv()"
+    "from langchain_google_genai import ChatGoogleGenerativeAI\n",
+    "llm = ChatGoogleGenerativeAI(model=\"gemini-2.5-flash-lite\", temperature=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "df6d0324",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The Prime Minister of Bangladesh is Sheikh Hasina.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from langchain_openai import ChatOpenAI\n",
-    "llm = ChatOpenAI(model_name=\"gpt-3.5-turbo\", temperature=0)\n",
-    "\n",
-    "res = llm.invoke(\"Who is the prime minister of Bangladesh?\")\n",
+    "res = llm.invoke(\"What is LangChain?\")\n",
     "print(res.content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b69d5636",
+   "metadata": {},
+   "source": [
+    "Static Prompts"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "aaeea1dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_google_genai import ChatGoogleGenerativeAI\n",
+    "llm = ChatGoogleGenerativeAI(model=\"gemini-2.5-flash-lite\", temperature=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c89d13d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompts = [\n",
+    "    (\"system\", \"You are a python developer\"),\n",
+    "    (\"user\", \"How to sort an array?\")\n",
+    "]\n",
+    "res = llm.invoke(prompts)\n",
+    "print(res.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07642ae1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_openai import ChatOpenAI\n",
+    "llm = ChatOpenAI(model_name=\"gpt-3.5-turbo\", temperature=0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52ee147a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompts = [\n",
+    "    \"system\", \"Act as a you are professional Java Developer\"\n",
+    "    \"User\", \"How to create a class in Java?\"\n",
+    "]\n",
+    "\n",
+    "res = llm.invoke(prompts)\n",
+    "print(res.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4076a51",
    "metadata": {},
    "outputs": [],
    "source": []
